--- a/lib/kamansky_web/live/component_live/table_component.html.heex
+++ b/lib/kamansky_web/live/component_live/table_component.html.heex
@@ -20,6 +20,9 @@
         %> items/page
       </label>
     </div>
+    <div class="kamansky-data-table-title">
+      <h3><%= @title %></h3>
+    </div>
     <div class="kamansky-data-table-search">
       <form phx-change="search" phx-target={@myself}>
         <input name="search" placeholder="Search..." value={@search} />
