--- a/lib/kamansky_web/live/customer_live/index.html.heex
+++ b/lib/kamansky_web/live/customer_live/index.html.heex
@@ -26,7 +26,8 @@
     options: [
       go_to_record: Map.get(assigns, :go_to_record),
       sort: 0
-    ]
+    ],
+    title: @page_title
   do %>
     <% customer -> %>
       <td><%= live_redirect customer.name, to: Routes.customer_show_path(@socket, :show, customer) %></td>
