--- a/lib/kamansky_web/live/listing_live/active.html.heex
+++ b/lib/kamansky_web/live/listing_live/active.html.heex
@@ -27,7 +27,8 @@
       go_to_record: Map.get(assigns, :go_to_record),
       sort: 0
     ],
-    parent_action: :active
+    parent_action: :active,
+    title: "Active Listings"
   do %>
     <% listing -> %>
       <td>
