--- a/lib/kamansky_web/live/listing_live/sold.html.heex
+++ b/lib/kamansky_web/live/listing_live/sold.html.heex
@@ -26,7 +26,8 @@
       go_to_record: Map.get(assigns, :go_to_record),
       sort: %{action: :sold, direction: :desc, column: 1}
     ],
-    parent_action: :sold
+    parent_action: :sold,
+    title: @page_title
   do %>
     <% listing -> %>
       <td>
