--- a/lib/kamansky_web/live/stamp_reference_live/index.html.heex
+++ b/lib/kamansky_web/live/stamp_reference_live/index.html.heex
@@ -31,7 +31,8 @@
     options: [
       go_to_record: Map.get(assigns, :go_to_record),
       sort: 0
-    ]
+    ],
+    title: @page_title
   do %>
     <% stamp_reference -> %>
       <td><%= stamp_reference.scott_number %></td>
