--- a/lib/kamansky_web/live/trend_live/sold.html.heex
+++ b/lib/kamansky_web/live/trend_live/sold.html.heex
@@ -16,7 +16,8 @@
     options: [
       go_to_record: Map.get(assigns, :go_to_record),
       sort: %{column: 1, direction: :desc}
-    ]
+    ],
+    title: @page_title
   do %>
     <% stamp -> %>
       <td><%= stamp.scott_number %></td>
