--- a/lib/kamansky_web/templates/layout/live.html.heex
+++ b/lib/kamansky_web/templates/layout/live.html.heex
@@ -1,11 +1,11 @@
 <header class="bg-white">
   <%= if @logged_in do %>
-    <nav class="bg-gray-800">
+    <nav class="bg-gray-800" x-data="{menuOpen: false}">
       <div class="max-w-7xl mx-auto pr-2 sm:pr-6 lg:pr-8">
         <div class="relative flex items-center justify-between h-16">
           <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
             <!-- Mobile menu button-->
-            <button 
+            <button
               type="button" 
               class="
                 inline-flex 
@@ -22,26 +22,29 @@
                 focus:ring-white" 
               aria-controls="mobile-menu" 
               aria-expanded="false"
+              x-on:click="menuOpen = !menuOpen"
             >
               <span class="sr-only">Open main menu</span>
-              <!--
-                Icon when menu is closed.
-
-                Heroicon name: outline/menu
-
-                Menu open: "hidden", Menu closed: "block"
-              -->
-              <svg class="block h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+              <svg 
+                class="h-6 w-6" 
+                :class="menuOpen ? 'hidden' : 'block'"
+                xmlns="http://www.w3.org/2000/svg" 
+                fill="none" 
+                viewBox="0 0 24 24" 
+                stroke="currentColor" 
+                aria-hidden="true"
+              >
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
               </svg>
-              <!--
-                Icon when menu is open.
-
-                Heroicon name: outline/x
-
-                Menu open: "block", Menu closed: "hidden"
-              -->
-              <svg class="hidden h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+              <svg 
+                class="h-6 w-6" 
+                :class="menuOpen ? 'block' : 'hidden'"
+                xmlns="http://www.w3.org/2000/svg" 
+                fill="none" 
+                viewBox="0 0 24 24" 
+                stroke="currentColor" 
+                aria-hidden="true"
+              >
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
               </svg>
             </button>
@@ -50,7 +53,7 @@
             <div class="flex-shrink-0 flex items-center px-5">
               <%= live_redirect to: Routes.dashboard_index_path(@socket, :index) do %>
                 <img 
-                  class="hidden lg:block h-8 w-auto" 
+                  class="h-8 w-auto" 
                   src={Routes.static_path(@socket, "/images/bumppoman-stamps-logo-white.svg")} 
                   alt="Bumppoman Stamps"
                 />
@@ -58,18 +61,15 @@
             </div>
             <div class="hidden sm:block sm:ml-6">
               <div class="flex space-x-4">
-                <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
                 <%= for link <- live_navbar_links(@socket, @live_action) do %>
                   <%= live_redirect link.title,
                     to: link.to,
-                    class: (
-                      ["font-medium px-3 py-2 rounded-md text-sm"] ++ (
-                        if link.active do
-                          ["bg-gray-900 text-white"]
-                        else 
-                          ["text-gray-300 hover:bg-gray-700 hover:text-white"]
-                        end
-                      )
+                    class: "font-medium px-3 py-2 rounded-md text-sm" <> (
+                      if link.active do
+                        " bg-gray-900 text-white"
+                      else 
+                        " text-gray-300 hover:bg-gray-700 hover:text-white"
+                      end
                     )
                   %>
                 <% end %>
@@ -121,17 +121,6 @@
                       </svg>
                     </button>
                   </div>
-
-                  <!--
-                    Dropdown menu, show/hide based on menu state.
-
-                    Entering: "transition ease-out duration-100"
-                      From: "transform opacity-0 scale-95"
-                      To: "transform opacity-100 scale-100"
-                    Leaving: "transition ease-in duration-75"
-                      From: "transform opacity-100 scale-100"
-                      To: "transform opacity-0 scale-95"
-                  -->
                   <div 
                     class="
                       absolute
@@ -144,6 +133,7 @@
                       ring-opacity-5
                       rounded-md
                       shadow-lg
+                      transition
                       w-56 
                       focus:outline-none" 
                     role="menu" 
@@ -151,9 +141,14 @@
                     aria-labelledby="menu-button" 
                     tabindex="-1" 
                     x-show="adminDropdown"
+                    x-transition:enter="ease-out duration-100"
+                    x-transition:enter-start="opacity-100 scale-95"
+                    x-transition:enter-end="opacity-100 scale-100"
+                    x-transition:leave="ease-in duration-75"
+                    x-transition:leave-start="opacity-100 scale-100"
+                    x-transition:leave-end="opacity-0 scale-95"
                   >
                     <div class="py-1" role="none">
-                      <!-- Active: "bg-gray-100 text-gray-900", Not Active: "text-gray-700" -->
                       <%= for link <- live_navbar_admin_links(@socket, @live_action) do %>
                         <%= live_redirect link.title, 
                           to: link.to, 
@@ -168,18 +163,30 @@
           </div>
         </div>
       </div>
-
-      <!-- Mobile menu, show/hide based on menu state. -->
-      <div class="sm:hidden" id="mobile-menu">
+      <div class="sm:hidden" id="mobile-menu" x-show="menuOpen">
         <div class="px-2 pt-2 pb-3 space-y-1">
-          <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
-          <a href="#" class="bg-gray-900 text-white block px-3 py-2 rounded-md text-base font-medium" aria-current="page">Dashboard</a>
-
-          <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Team</a>
-
-          <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Projects</a>
-
-          <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Calendar</a>
+          <%= live_redirect "Dashboard",
+            to: Routes.dashboard_index_path(@socket, :index),
+            class: "block font-medium px-3 py-2 rounded-md text-base" <> (
+              if @socket.view == KamanskyWeb.DashboardLive.Index do
+                " bg-gray-900 text-white"
+              else
+                " text-gray-300 hover:bg-gray-700 hover:text-white"
+              end
+            )
+          %>
+          <%= for link <- live_navbar_links(@socket, @live_action) do %>
+            <%= live_redirect link.title,
+              to: link.to,
+              class: "block font-medium px-3 py-2 rounded-md text-base" <> (
+                if link.active do
+                  " bg-gray-900 text-white"
+                else 
+                  " text-gray-300 hover:bg-gray-700 hover:text-white"
+                end
+              )
+            %>
+          <% end %>
         </div>
       </div>
     </nav>
@@ -255,7 +262,111 @@
       <p>Please log in.</p>
     </div>
   <% end %>
-  <KamanskyWeb.Components.Page.confirm />
+  <div
+    class="fixed z-10 inset-0 overflow-y-auto"
+    x-data="{detail: {action: null, content: null, title: null, values: null}, open: false}"
+    x-on:keydown.window.escape="open = false"
+    x-on:kamansky:open-confirmation-modal.camel.window="() => {
+      open = true;
+      detail = $event.detail;
+
+      if ($event.detail.values) {
+        for (value of $event.detail.values) {
+          $refs.success.setAttribute(`phx-value-${value.key}`, value.value);
+        }
+      }
+    }"
+    x-on:phx:kamansky:close-confirmation-modal.camel.window="open = false"
+    x-show="open"
+    aria-labelledby="modal-title"
+    aria-modal="true"
+  >
+    <div class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
+      <div
+        class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity"
+        x-on:click="open = false"
+        x-show="open"
+        x-transition:enter="ease-out duration-300"
+        x-transition:enter-start="opacity-0"
+        x-transition:enter-end="opacity-100"
+        x-transition:leave="ease-in duration-200"
+        x-transition:leave-start="opacity-100"
+        x-transition:leave-end="opacity-0"
+        aria-hidden="true"
+      > </div>
+      <!-- This element is to trick the browser into centering the modal contents. -->
+      <span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">​</span>
+      <div
+        class=
+          "align-bottom
+          bg-white
+          inline-block
+          overflow-hidden
+          pb-4
+          pt-5
+          px-4
+          rounded-lg
+          shadow-xl
+          text-left
+          transform
+          transition-all
+          sm:align-middle
+          sm:max-w-lg
+          sm:my-8
+          sm:p-6
+          sm:w-full"
+        x-show="open"
+        x-transition:enter="ease-out duration-300"
+        x-transition:enter-start="opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
+        x-transition:enter-end="opacity-100 translate-y-0 sm:scale-100"
+        x-transition:leave="ease-in duration-200"
+        x-transition:leave-start="opacity-100 translate-y-0 sm:scale-100"
+        x-transition:leave-end="opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
+        >
+          <div class="sm:flex sm:items-start">
+            <div class="mx-auto flex-shrink-0 flex items-center justify-center h-12 w-12 rounded-full bg-blue-100 sm:mx-0 sm:h-10 sm:w-10">
+              <svg
+                class="h-6 text-blue-600 w-6"
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+                aria-hidden="true"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z"
+                />
+              </svg>
+            </div>
+            <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
+              <h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-title" x-text="detail.title" />
+              <div class="mt-2">
+                <p class="text-sm text-gray-500" x-text="detail.content" />
+              </div>
+            </div>
+          </div>
+          <div class="mt-5 sm:mt-4 sm:flex sm:flex-row-reverse">
+            <button
+              type="button"
+              class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-blue-600 text-base font-medium text-white hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 sm:ml-3 sm:w-auto sm:text-sm"
+              :phx-click="detail.action"
+              x-ref="success"
+              x-text="detail.title"
+            />
+            <button
+              type="button"
+              class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:mt-0 sm:w-auto sm:text-sm"
+              x-on:click="open = false"
+            >
+              Cancel
+            </button>
+          </div>
+        </div>
+    </div>
+  </div>
 </main>
 <footer class="font-extralight text-center text-xs">
   © 2021 Brendon Stanton and Bumppoman Industries.
