Add badges to dashboard orders.

--- a/lib/kamansky_web/live/dashboard_live/index.html.heex
+++ b/lib/kamansky_web/live/dashboard_live/index.html.heex
@@ -51,7 +51,7 @@
                   <dd>
                     <div class="text-lg font-medium text-gray-900">
                       <%= format_decimal_as_currency(@data.listed_stamp_cost) %> <span class="text-gray-500 text-sm">(cost)</span> /
-                      <%= format_decimal_as_currency(@data.total_listing_price) %> <span class="text-gray-500 text-sm">(listed price)</span>
+                      <%= format_decimal_as_currency(@data.total_listing_price) %> <span class="text-gray-500 text-sm">(listed)</span>
                     </div>
                   </dd>
                 </dl>
