--- a/lib/kamansky_web/live/stamp_live/detail_component.html.heex
+++ b/lib/kamansky_web/live/stamp_live/detail_component.html.heex
@@ -2,7 +2,7 @@
   <div class="mr-8">
     <div>
       <img
-        height="200"
+        class="h-52"
         src={elem(@current_photo, 1)}
       />
       <%= if display_photo_nav(@stamp) do %>
